sdl-parser/src/snapshots/sdl_parser__feature__tests__feature_includes_dependencies.snap
---
source: sdl-parser/src/feature.rs
expression: feature
---
Feature {
    feature_type: Service,
    _source_helper: Some(
        ShortSource(
            "some-service",
        ),
    ),
    source: None,
    dependencies: Some(
        [
            "some-virtual-machine",
            "some-switch",
            "something-else",
        ],
    ),
    vulnerabilities: None,
    variables: None,
    destination: None,
}
