sdl-parser/src/snapshots/sdl_parser__feature__tests__feature_source_fields_are_mapped_correctly.snap
---
source: sdl-parser/src/feature.rs
expression: features
---
scenario:
  name: test-scenario
  description: some-description
  start: "2022-01-20T13:00:00Z"
  end: "2022-01-20T23:00:00Z"
  nodes: ~
  features:
    my-cool-feature:
      source:
        name: some-service
        version: "*"
      dependencies: ~
    my-cool-feature-config:
      source:
        name: cool-config
        version: 1.0.0
      dependencies: ~
  infrastructure: ~
  conditions: ~

