sdl-parser/src/snapshots/sdl_parser__feature__tests__feature_source_longhand_is_parsed.snap
---
source: sdl-parser/src/feature.rs
expression: feature
---
Feature {
    feature_type: Artifact,
    _source_helper: Some(
        Source(
            Source {
                name: "artifact-name",
                version: "1.2.3",
            },
        ),
    ),
    source: None,
    dependencies: None,
    vulnerabilities: None,
    variables: None,
    destination: None,
    description: None,
}
