sdl-parser/src/snapshots/sdl_parser__feature__tests__feature_source_shorthand_is_parsed.snap
---
source: sdl-parser/src/feature.rs
expression: feature
---
Feature {
    _source_helper: Some(
        ShortSource(
            "artifact-name",
        ),
    ),
    source: None,
    dependencies: None,
    vulnerabilities: None,
}
